--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port = 8081
-#logging.level.root=DEBUG
+logging.level.root=DEBUG
 #spring.thymeleaf.mode=LEGACYHTML5
 #spring.thymeleaf.cache=false
 #spring.mvc.view.prefix=webapp/WEB-INF/views
