--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
 server.port = 8081
 #logging.level.root=DEBUG
-#spring.thymeleaf.mode=LEGACYHTML5
-#spring.thymeleaf.cache=false
-#spring.mvc.view.prefix=webapp/WEB-INF/views
-#spring.mvc.view.suffix=.jsp
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.cache=false
